Editing changes.  Add install.csh to repo